# tdastro

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .setup_dev.sh  README.md  index.json  info.json  pyproject.toml  regressions.json  regressions.xml
.github/workflows/: asv-main.yml  asv-nightly.yml  asv-pr.yml  pre-commit-ci.yml  smoke-test.yml  testing-and-coverage.yml
_results/: benchmarks.json
_results/gh-runner/: 0123ad9c-virtualenv-py3.11-Cython-build-packaging.json  01463ec2-virtualenv-py3.10-Cython-build-packaging.json  01463ec2-virtualenv-py3.11-Cython-build-packaging.json  01d1efce-virtualenv-py3.11-Cython-build-packaging.json  023a5dad-virtualenv-py3.11-Cython-build-packaging.json  02815e68-virtualenv-py3.10-Cython-build-packaging.json  02815e68-virtualenv-py3.11-Cython-build-packaging.json  0386b257-virtualenv-py3.10-Cython-build-packaging.json  0386b257-virtualenv-py3.11-Cython-build-packaging.json  05e93a75-virtualenv-py3.10-Cython-build-packaging.json  05e93a75-virtualenv-py3.11-Cython-build-packaging.json  072c8858-virtualenv-py3.10-Cython-build-packaging.json  072c8858-virtualenv-py3.11-Cython-build-packaging.json  078abbf7-virtualenv-py3.11-Cython-build-packaging.json  079e2e0f-virtualenv-py3.10-Cython-build-packaging.json  079e2e0f-virtualenv-py3.11-Cython-build-packaging.json  07ebd354-virtualenv-py3.11-Cython-build-packaging.json  080d28cf-virtualenv-py3.10-Cython-build-packaging.json  080d28cf-virtualenv-py3.11-Cython-build-packaging.json  085d5961-virtualenv-py3.11-Cython-build-packaging.json  088ddc10-virtualenv-py3.10-Cython-build-packaging.json  088ddc10-virtualenv-py3.11-Cython-build-packaging.json  0b6dc949-virtualenv-py3.10-Cython-build-packaging.json  0b6dc949-virtualenv-py3.11-Cython-build-packaging.json  0bcc3339-virtualenv-py3.10-Cython-build-packaging.json  0bcc3339-virtualenv-py3.11-Cython-build-packaging.json  0c25e49a-virtualenv-py3.10-Cython-build-packaging.json  0c25e49a-virtualenv-py3.11-Cython-build-packaging.json  0c31e23b-virtualenv-py3.10-Cython-build-packaging.json  0c31e23b-virtualenv-py3.11-Cython-build-packaging.json  0c9ee865-virtualenv-py3.11-Cython-build-packaging.json  0dc06960-virtualenv-py3.11-Cython-build-packaging.json  101e87b9-virtualenv-py3.10-Cython-build-packaging.json  101e87b9-virtualenv-py3.11-Cython-build-packaging.json  103914e5-virtualenv-py3.10-Cython-build-packaging.json  103914e5-virtualenv-py3.11-Cython-build-packaging.json  117f7399-virtualenv-py3.10-Cython-build-packaging.json  117f7399-virtualenv-py3.11-Cython-build-packaging.json  1219f5d2-virtualenv-py3.11-Cython-build-packaging.json  12e4dd52-virtualenv-py3.11-Cython-build-packaging.json  (+529 more)
benchmarks/: asv.conf.json  benchmarks.py
docs/: citations.rst  conf.py  contributing.rst  glossary.rst  index.rst  notebooks.rst  requirements.txt  simulations.rst
docs/notebooks/: ZTF_snia.ipynb  adding_effects.ipynb  adding_models.ipynb  adding_sources.ipynb  addings_effects.ipynb  bandpass-demo.ipynb  (+23 more)
(+411 files in other folders)
